* HTML5 Open Reference Guide SNB 속성메뉴 [E]

--- a/branches/p_130510_html5_OR/index.html
+++ b/branches/p_130510_html5_OR/index.html
@@ -209,7 +209,7 @@ Ext.onReady(function(){
 					{text: 'controls_media', leaf: true, href: ['ext/data/attributes/controls_media.php']},
 					{text: 'coords', leaf: true, href: ['ext/data/attributes/coords.php']}
 				]},
-				{text: 'D', expanded: true, children: [
+				{text: 'D', expanded: false, children: [
 					{text: 'data (object)', leaf: true, href: ['ext/data/attributes/data_object.php']},
 					{text: 'datetime (ins, del)', leaf: true, href: ['ext/data/attributes/datetime_edits.php']},
 					{text: 'default (track)', leaf: true, href: ['ext/data/attributes/default_track.php']},
@@ -217,6 +217,7 @@ Ext.onReady(function(){
 					{text: 'dir', leaf: true, href: ['ext/data/attributes/dir.php']},
 					{text: 'dirname (input)', leaf: true, href: ['ext/data/attributes/dirname_input.php']},
 					{text: 'dirname (textarea)', leaf: true, href: ['ext/data/attributes/dirname_textarea.php']},
+					{text: 'disabled', leaf: true, href: ['ext/data/attributes/disabled.php']},
 					{text: 'disabled (command)', leaf: true, href: ['ext/data/attributes/disabled_command.php']},
 					{text: 'disabled (fieldset)', leaf: true, href: ['ext/data/attributes/disabled_fieldset.php']},
 					{text: 'disabled (optgroup)', leaf: true, href: ['ext/data/attributes/disabled_optgroup.php']},
@@ -227,7 +228,7 @@ Ext.onReady(function(){
 				{text: 'E', expanded: false, children: [
 					{text: 'enctype', leaf: true, href: ['ext/data/attributes/enctype.php']}
 				]},
-				{text: 'F', expanded: false, children: [
+				{text: 'F', expanded: true, children: [
 					{text: 'for (label)', leaf: true, href: ['ext/data/attributes/for_label.php']},
 					{text: 'for (output)', leaf: true, href: ['ext/data/attributes/for_output.php']},
 					{text: 'form', leaf: true, href: ['ext/data/attributes/form.php']},
