* HTML5 Open Reference Guide SNB 속성메뉴 [N~S] S(1/3)

--- a/branches/p_130510_html5_OR/index.html
+++ b/branches/p_130510_html5_OR/index.html
@@ -290,7 +290,7 @@ Ext.onReady(function(){
 					{text: 'multiple (input)', leaf: true, href: ['ext/data/attributes/multiple_input.php']},
 					{text: 'multiple (select)', leaf: true, href: ['ext/data/attributes/multiple_select.php']}
 				]},
-				{text: 'N', expanded: true, children: [
+				{text: 'N', expanded: false, children: [
 					{text: 'name', leaf: true, href: ['ext/data/attributes/name.php']},
 					{text: 'name (iframe)', leaf: true, href: ['ext/data/attributes/name_iframe.php']},
 					{text: 'name (map)', leaf: true, href: ['ext/data/attributes/name_map.php']},
@@ -314,6 +314,7 @@ Ext.onReady(function(){
 					{text: 'radiogroup (command)', leaf: true, href: ['ext/data/attributes/radiogroup_command.php']},
 					{text: 'readonly (input)', leaf: true, href: ['ext/data/attributes/readonly_input.php']},
 					{text: 'readonly (textarea)', leaf: true, href: ['ext/data/attributes/readonly_textarea.php']},
+					{text: 'rel', leaf: true, href: ['ext/data/attributes/rel.php']},
 					{text: 'required (input)', leaf: true, href: ['ext/data/attributes/required_input.php']},
 					{text: 'required (select)', leaf: true, href: ['ext/data/attributes/required_select.php']},
 					{text: 'required (textarea)', leaf: true, href: ['ext/data/attributes/required_textarea.php']},
@@ -321,7 +322,7 @@ Ext.onReady(function(){
 					{text: 'rows (textarea)', leaf: true, href: ['ext/data/attributes/rows_textarea.php']},
 					{text: 'rowspan', leaf: true, href: ['ext/data/attributes/rowspan.php']}
 				]},
-				{text: 'S', expanded: false, children: [
+				{text: 'S', expanded: true, children: [
 					{text: 'sandbox (iframe)', leaf: true, href: ['ext/data/attributes/sandbox_iframe.php']},
 					{text: 'scope', leaf: true, href: ['ext/data/attributes/scope.php']},
 					{text: 'scoped (style)', leaf: true, href: ['ext/data/attributes/scoped_style.php']},
