* HTML5 Open Reference Guide SNB 속성메뉴 [S] * 잘못 선언된 script 태그 삭제

--- a/branches/p_130510_html5_OR/index.html
+++ b/branches/p_130510_html5_OR/index.html
@@ -322,7 +322,7 @@ Ext.onReady(function(){
 					{text: 'rows (textarea)', leaf: true, href: ['ext/data/attributes/rows_textarea.php']},
 					{text: 'rowspan', leaf: true, href: ['ext/data/attributes/rowspan.php']}
 				]},
-				{text: 'S', expanded: true, children: [
+				{text: 'S', expanded: false, children: [
 					{text: 'sandbox (iframe)', leaf: true, href: ['ext/data/attributes/sandbox_iframe.php']},
 					{text: 'scope', leaf: true, href: ['ext/data/attributes/scope.php']},
 					{text: 'scoped (style)', leaf: true, href: ['ext/data/attributes/scoped_style.php']},
@@ -348,7 +348,7 @@ Ext.onReady(function(){
 					{text: 'step (input)', leaf: true, href: ['ext/data/attributes/step_input.php']},
 					{text: 'style', leaf: true, href: ['ext/data/attributes/style.php']}
 				]},
-				{text: 'T', expanded: false, children: [
+				{text: 'T', expanded: true, children: [
 					{text: 'tabindex', leaf: true, href: ['ext/data/attributes/tabindex.php']},
 					{text: 'target', leaf: true, href: ['ext/data/attributes/target.php']},
 					{text: 'target (base)', leaf: true, href: ['ext/data/attributes/target_base.php']},
