* HTML5 Open Reference Guide SNB 속성메뉴 [W]

--- a/branches/p_130510_html5_OR/index.html
+++ b/branches/p_130510_html5_OR/index.html
@@ -348,7 +348,7 @@ Ext.onReady(function(){
 					{text: 'step (input)', leaf: true, href: ['ext/data/attributes/step_input.php']},
 					{text: 'style', leaf: true, href: ['ext/data/attributes/style.php']}
 				]},
-				{text: 'T', expanded: true, children: [
+				{text: 'T', expanded: false, children: [
 					{text: 'tabindex', leaf: true, href: ['ext/data/attributes/tabindex.php']},
 					{text: 'target', leaf: true, href: ['ext/data/attributes/target.php']},
 					{text: 'target (base)', leaf: true, href: ['ext/data/attributes/target_base.php']},
